# youtube-transcript-wrapper

./: .gitignore  pyproject.toml  requirements.txt
src/: main.py  proxy_manager.py
