[tool.poetry]
name = "youtube-transcript-api"
version = "0.1.0"
description = "API for retrieving YouTube video transcripts"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
youtube-transcript-api = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"